package pattern_examples.chain_of_responsibility_example;

public class Level {
    public static final int ERROR = 1;
    public static final int DEBUG = 2;
    public static final int INFO = 3;
}
