@startuml

title __CHAIN_OF_RESPONSIBILITY_EXAMPLE's Class Diagram__\n

  namespace pattern_examples.chain_of_responsibility_example {
    class pattern_examples.chain_of_responsibility_example.EmailLogger {
        + EmailLogger()
        + write()
    }
  }
  

  namespace pattern_examples.chain_of_responsibility_example {
    class pattern_examples.chain_of_responsibility_example.FileLogger {
        + FileLogger()
        + write()
    }
  }
  

  namespace pattern_examples.chain_of_responsibility_example {
    class pattern_examples.chain_of_responsibility_example.Level {
        {static} + DEBUG : int
        {static} + ERROR : int
        {static} + INFO : int
    }
  }
  

  namespace pattern_examples.chain_of_responsibility_example {
    abstract class pattern_examples.chain_of_responsibility_example.Logger {
        ~ priority : int
        + Logger()
        + setNextLogger()
        + writeMessage()
        {abstract} ~ write()
    }
  }
  

  namespace pattern_examples.chain_of_responsibility_example {
    class pattern_examples.chain_of_responsibility_example.Main {
        {static} + main()
    }
  }
  

  namespace pattern_examples.chain_of_responsibility_example {
    class pattern_examples.chain_of_responsibility_example.SMSLogger {
        + SMSLogger()
        + write()
    }
  }
  

  pattern_examples.chain_of_responsibility_example.EmailLogger -up-|> pattern_examples.chain_of_responsibility_example.Logger
  pattern_examples.chain_of_responsibility_example.FileLogger -up-|> pattern_examples.chain_of_responsibility_example.Logger
  pattern_examples.chain_of_responsibility_example.Logger o-- pattern_examples.chain_of_responsibility_example.Logger : nextLogger
  pattern_examples.chain_of_responsibility_example.SMSLogger -up-|> pattern_examples.chain_of_responsibility_example.Logger


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
